@@ -46,4 +46,13 @@ export class ImageFeatureExtraction {
       });
     });
   }
+
+  /*eslint no-unused-vars ["off", { "args": "all" }]*/
+  public customizable(modelName: string, version: string, files: string): Promise<any> {
+    return new Promise<any>((resolve, reject) => {
+      // const url = "/ml/imageclassification/models/" + modelName + "/versions/" + version;
+      reject("not implemented");
+    });
+  }
+
 }
